# AI-Powered_Workout_Generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
ai_component/LLMs/: Groq_llm.py
ai_component/chains/: genarate_motivation.py  generate_daily_workout.py
ai_component/prompts/: prompts.py
ai_component/schemas/: response_sehema.py
ai_component/short_term_memory/: redis_short_term_memory.py
app/: main.py
langchain/LLMs/: Groq_llm.py
langchain/prompts/: prompts.py
langchain/short_term_memory/: redis_short_term_memory.py
notebook/: Workout_Generator.ipynb
